# todo_app

./: .gitignore  pyproject.toml
backend/src/common/: config.py  exception.py  utils.py
backend/src/todo/entity/: todo_entity.py
backend/src/todo/repository/interfaces/: todo_repo.py
backend/src/todo/schemas/: schemas.py
backend/src/todo/usecases/read/: fetch_all.py  fetch_one.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: Todo.js  TodoListView.js  addTodo.js
src/common/: config.py
src/todo/entrypoint/: app.py
src/todo/repository/impl/: todo_store.py
src/todo/repository/interfaces/: todo_repo.py
src/todo/schemas/: schemas.py
src/todo/usecases/create/: create_todo.py
src/todo/usecases/delete/: delete_todo.py
src/todo/usecases/update/: update_todo.py
