[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "todo app using fastapi"
authors = ["himanshu1998-ai <himanshuchauhan6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
fastapi = "^0.104.0"
pytest-mock = "^3.12.0"
motor = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
